@@ -14,7 +14,11 @@ and Marcelo Vanzin for contributing to this release.
 - Fixed caret going to the wrong position when adding explicit folds
   in a buffer that uses an edit mode that has no line comment
   (Matthieu Casanova #2138160)
-  
+
+- Fixed caret going after the explicit folds when adding explicit folds
+  to the wrong position when adding explicit folds while having no
+  selection, in any edit mode  (Matthieu Casanova)
+
 - When saving a buffer the autoreload option of the buffer was overridden
   by global settings (Matthieu Casanova #2999966)
 
